src/test/ui/issues/issue-46438.stderr
error: expected a trait, found type
  --> $DIR/issue-46438.rs:21:4
   |
LL | m!(&'static u8); //~ ERROR expected a trait, found type
   |    ^^^^^^^^^^^

error: aborting due to previous error

